# rustakka-langgraph

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/py-bindings/pylanggraph/: Cargo.toml
crates/py-bindings/pylanggraph/src/: conversions.rs  lib.rs  py_callable_node.rs  py_command.rs  py_compiled_state_graph.rs  py_savers.rs  py_state_graph.rs  py_stores.rs  runtime.rs
crates/rustakka-langgraph/: Cargo.toml
crates/rustakka-langgraph-checkpoint/: Cargo.toml
crates/rustakka-langgraph-checkpoint-postgres/: Cargo.toml
crates/rustakka-langgraph-checkpoint-postgres/src/: lib.rs  saver.rs  schema.rs
crates/rustakka-langgraph-checkpoint-sqlite/: Cargo.toml
crates/rustakka-langgraph-checkpoint-sqlite/src/: lib.rs
crates/rustakka-langgraph-checkpoint-sqlite/tests/: integration.rs
crates/rustakka-langgraph-checkpoint/src/: base.rs  hook.rs  lib.rs  memory.rs
crates/rustakka-langgraph-core/: Cargo.toml
crates/rustakka-langgraph-core/src/: channel.rs  command.rs  config.rs  context.rs  coordinator.rs  errors.rs  graph.rs  lib.rs  node.rs  node_worker.rs  runner.rs  state.rs  stream.rs  visualize.rs
crates/rustakka-langgraph-core/tests/: cache_policy.rs  control_flow.rs  streaming.rs
crates/rustakka-langgraph-macros/: Cargo.toml
crates/rustakka-langgraph-macros/src/: lib.rs
crates/rustakka-langgraph-prebuilt/: Cargo.toml
crates/rustakka-langgraph-prebuilt/src/: lib.rs  providers_adapter.rs  react_agent.rs  supervisor.rs  swarm.rs  tool_node.rs
crates/rustakka-langgraph-prebuilt/tests/: react_agent.rs  react_agent_with_mock_provider.rs
crates/rustakka-langgraph-profiler/: Cargo.toml
crates/rustakka-langgraph-profiler/src/: main.rs
crates/rustakka-langgraph-providers/: Cargo.toml
crates/rustakka-langgraph-providers/src/: error.rs  lib.rs  mock.rs  traits.rs
crates/rustakka-langgraph-providers/src/azure/: client.rs  mod.rs
crates/rustakka-langgraph-providers/src/bedrock/: adapters.rs  client.rs  convert.rs  mod.rs
crates/rustakka-langgraph-providers/src/ollama/: client.rs  mod.rs  stream.rs
crates/rustakka-langgraph-providers/src/openai/: client.rs  mod.rs  stream.rs  types.rs
crates/rustakka-langgraph-providers/src/types/: message.rs  mod.rs  options.rs
crates/rustakka-langgraph-providers/src/vertex/: client.rs  mod.rs  stream.rs  types.rs
crates/rustakka-langgraph-providers/tests/: azure_integration.rs  ollama_integration.rs  openai_integration.rs  vertex_integration.rs
crates/rustakka-langgraph-store/: Cargo.toml
crates/rustakka-langgraph-store-postgres/: Cargo.toml
crates/rustakka-langgraph-store-postgres/src/: lib.rs
crates/rustakka-langgraph-store/src/: accessor.rs  base.rs  embedding.rs  lib.rs  memory.rs
crates/rustakka-langgraph-store/tests/: store_injection.rs
crates/rustakka-langgraph/src/: lib.rs
docs/: TODO.md  architecture.md  checkpointing.md  prebuilt.md  python.md  store.md  streaming.md
examples/rust_pingpong/: Cargo.toml
examples/rust_pingpong/src/: main.rs
examples/rust_react_agent/: Cargo.toml
examples/rust_react_agent/src/: main.rs
python/langgraph/: __init__.py  graph.py  types.py
python/langgraph/checkpoint/: __init__.py  memory.py  postgres.py  sqlite.py
python/langgraph/func/: __init__.py
python/langgraph/prebuilt/: __init__.py
python/langgraph/store/: __init__.py  memory.py  postgres.py
python/rustakka_langgraph/: __init__.py  graph_builder.py
python/tests/: test_prebuilt_and_func.py  test_state_graph.py
resources/: Rust LangGraph with Python Bridge.md  Rustakka LangGraph Provider Plan.md
scripts/: dev-env.sh  dev.sh
