[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rustakka-langgraph"
version = "0.1.0"
description = "Native-Rust LangGraph engine on rustakka actors with a Python shim"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "rustakka-langgraph contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-xdist>=3"]
postgres = ["psycopg[binary,pool]>=3.2"]
sqlite = []

[project.urls]
Homepage = "https://github.com/cognect/rustakka-langgraph"
Repository = "https://github.com/cognect/rustakka-langgraph"

[tool.maturin]
manifest-path = "crates/py-bindings/pylanggraph/Cargo.toml"
python-source = "python"
module-name = "rustakka_langgraph._native"
features = ["pyo3/extension-module"]
strip = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python/tests"]
filterwarnings = ["error"]
