[package]
name = "rustakka-langgraph-checkpoint-sqlite"
description = "SQLite-backed Checkpointer (mirrors langgraph-checkpoint-sqlite)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustakka-langgraph-core       = { workspace = true }
rustakka-langgraph-checkpoint = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }
uuid             = { workspace = true }
futures          = { workspace = true }
tokio            = { workspace = true }
sqlx             = { workspace = true, features = ["sqlite"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
