[package]
name = "rustakka-langgraph-checkpoint"
description = "Checkpointer trait and in-memory saver for rustakka-langgraph (mirrors langgraph-checkpoint)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustakka-langgraph-core = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
parking_lot      = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }
uuid             = { workspace = true }
futures          = { workspace = true }
tokio            = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
