[package]
name = "rustakka-langgraph-macros"
description = "Procedural macros for rustakka-langgraph (#[derive(GraphState)], #[node])"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }
