[package]
name = "rustakka-langgraph-prebuilt"
description = "Prebuilt graphs (create_react_agent, ToolNode) for rustakka-langgraph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustakka-langgraph-core = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
