[package]
name = "rustakka-langgraph-store-postgres"
description = "Postgres BaseStore (mirrors langgraph.store.postgres)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustakka-langgraph-core  = { workspace = true }
rustakka-langgraph-store = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
chrono           = { workspace = true }
tokio            = { workspace = true }
sqlx             = { workspace = true, features = ["postgres"] }

[dev-dependencies]
tokio = { workspace = true }
