[package]
name = "rustakka-langgraph-store"
description = "BaseStore trait + InMemoryStore (mirrors langgraph.store.base + .memory)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustakka-langgraph-core = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
parking_lot      = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }
uuid             = { workspace = true }
tokio            = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
