[package]
name = "pylanggraph"
description = "PyO3 bindings: rustakka-langgraph engine -> langgraph._native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
default = ["sqlite"]
sqlite   = ["rustakka-langgraph/sqlite"]
postgres = ["rustakka-langgraph/postgres"]
prebuilt = ["rustakka-langgraph/prebuilt"]
full     = ["sqlite", "postgres", "prebuilt"]

[dependencies]
rustakka-langgraph              = { workspace = true, default-features = false }
rustakka-langgraph-core         = { workspace = true }
rustakka-langgraph-checkpoint   = { workspace = true }
rustakka-langgraph-store        = { workspace = true }

pyo3                = { workspace = true }
pyo3-async-runtimes = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true }
once_cell           = { workspace = true }
async-trait         = { workspace = true }
futures             = { workspace = true }
anyhow              = { workspace = true }
